# ndas-cli

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  build.rs  ndas-kernel-ffi.h  rebuild-run.bash  rebuild.bash  xdp-dumper-user
.fso-amem/: project.toml
src/: cli_config.rs  cli_selections.rs  event_flusher.rs  main.rs  sysstat_helper.rs  xdp_kernel_hook.rs
